# food-classifier

./: .dockerignore  Dockerfile  README.md  active_env.sh  colab_instructions.md  colab_setup.py  docker-compose.yml  fix_env.sh  fix_python.sh  pyproject.toml
food_classifier/: dataset.py  evaluate.py  model.py  split_dataset.py  train.py
